Fix Control Form at Shift

--- a/src/components/nav/navbar.scss
+++ b/src/components/nav/navbar.scss
@@ -47,7 +47,6 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: salmon;
     height: 8%;
 
 
